# ncml_module

./: .gitignore  AggMemberDataset.cc  AggMemberDataset.h  AggMemberDatasetDDSWrapper.cc  AggMemberDatasetDDSWrapper.h  AggMemberDatasetDimensionCache.cc  AggMemberDatasetDimensionCache.h  AggMemberDatasetSharedDDSWrapper.cc  AggMemberDatasetSharedDDSWrapper.h  AggMemberDatasetUsingLocationRef.cc  AggMemberDatasetUsingLocationRef.h  AggMemberDatasetWithDimensionCacheBase.cc  AggMemberDatasetWithDimensionCacheBase.h  AggregationElement.cc  AggregationElement.h  AggregationException.cc  AggregationException.h  AggregationUtil.cc  AggregationUtil.h  ArrayAggregateOnOuterDimension.cc  ArrayAggregateOnOuterDimension.h  ArrayAggregationBase.cc  ArrayAggregationBase.h  ArrayJoinExistingAggregation.cc  ArrayJoinExistingAggregation.h  AttributeElement.cc  AttributeElement.h  COPYING  COPYRIGHT  ChangeLog  DDSAccessInterface.cc  DDSAccessInterface.h  DDSLoader.cc  DDSLoader.h  Dimension.cc  Dimension.h  DimensionElement.cc  DimensionElement.h  DirectoryUtil.cc  DirectoryUtil.h  (+91 more)
bes-testsuite/: Makefile.am  Makefile.in  bes.conf.in  generate_type_check_bescmd.sh  generate_type_check_exp.sh  type_validation_test.ddx.bescmd.in  type_validation_test.exp.in  types.ddx.bescmd.in  types.exp.in
bes-testsuite/besstandalone.ncml/: fnoc1_explicit.ncml.0.exp  fnoc1_improved.ncml.0.exp  fnoc1_improved.ncml.ddx.exp  fnoc1_improved.ncml.dods.exp  fnoc1_remove.ncml.ddx.exp  fnoc1_rename_test.ncml.das.exp  nested.ncml.0.exp  nested_passthrough.ncml.ddx.exp  nested_passthrough_constraint.ncml.dds.exp  nested_passthrough_constraint.ncml.ddx.exp  nested_passthrough_constraint.ncml.dods.exp
bes-testsuite/besstandalone.ncml/type_validation_tests/: byte_bounds.ncml.ddx.exp  byte_invalid.ncml.ddx.exp  float32_invalid.ncml.ddx.exp  float32_max_bounds.ncml.ddx.exp  float32_min_bounds.ncml.ddx.exp  float64_invalid.ncml.ddx.exp  float64_max_bounds.ncml.ddx.exp  float64_min_bounds.ncml.ddx.exp  int16_invalid.ncml.ddx.exp  int16_max_bounds.ncml.ddx.exp  int16_min_bounds.ncml.ddx.exp  int32_invalid.ncml.ddx.exp  int32_max_bounds.ncml.ddx.exp  int32_min_bounds.ncml.ddx.exp  string_non_ascii.ncml.ddx.exp  string_overflow.ncml.ddx.exp  uint16_invalid.ncml.ddx.exp  uint16_max_bounds.ncml.ddx.exp  uint16_min_bounds.ncml.ddx.exp  uint32_invalid.ncml.ddx.exp  uint32_max_bounds.ncml.ddx.exp  uint32_min_bounds.ncml.ddx.exp
bes-testsuite/besstandalone.ncml/types/: byte_bounds.ncml.ddx.exp  byte_invalid.ncml.ddx.exp  float32_invalid.ncml.ddx.exp  float32_max_bounds.ncml.ddx.exp  float32_min_bounds.ncml.ddx.exp  float64_invalid.ncml.ddx.exp  float64_max_bounds.ncml.ddx.exp  float64_min_bounds.ncml.ddx.exp  int16_invalid.ncml.ddx.exp  int16_max_bounds.ncml.ddx.exp  int16_min_bounds.ncml.ddx.exp  int32_invalid.ncml.ddx.exp  int32_max_bounds.ncml.ddx.exp  int32_min_bounds.ncml.ddx.exp  string_non_ascii.ncml.ddx.exp  string_overflow.ncml.ddx.exp  uint16_invalid.ncml.ddx.exp  uint16_max_bounds.ncml.ddx.exp  uint16_min_bounds.ncml.ddx.exp  uint32_invalid.ncml.ddx.exp  uint32_max_bounds.ncml.ddx.exp  uint32_min_bounds.ncml.ddx.exp
bes-testsuite/config/: unix.exp
bes-testsuite/ncml/: fnoc1.nc.0.bescmd  fnoc1_explicit.ncml.0.bescmd  fnoc1_explicit.ncml.0.bescmd.baseline  fnoc1_improved.ncml.0.bescmd  fnoc1_improved.ncml.0.bescmd.baseline  fnoc1_improved.ncml.ddx.bescmd  fnoc1_improved.ncml.dods.bescmd  fnoc1_remove.ncml.ddx.bescmd  fnoc1_remove.ncml.ddx.bescmd.baseline  fnoc1_rename_test.ncml.das.bescmd  fnoc1_rename_test.ncml.ddx.bescmd  nested.ncml.0.bescmd  nested.ncml.0.bescmd.baseline  nested_orig.hdf.0.bescmd  nested_passthrough.ncml.das.bescmd  nested_passthrough.ncml.dds.bescmd  nested_passthrough.ncml.ddx.bescmd  nested_passthrough.ncml.ddx.bescmd.baseline  nested_passthrough.ncml.dods.bescmd  nested_passthrough_constraint.ncml.dds.bescmd  nested_passthrough_constraint.ncml.ddx.bescmd  nested_passthrough_constraint.ncml.dods.bescmd  parse_error.match
bes-testsuite/ncml/type_validation_tests/: byte_bounds.ncml.ddx.bescmd  byte_invalid.ncml.ddx.bescmd  float32_invalid.ncml.ddx.bescmd  float32_max_bounds.ncml.ddx.bescmd  float32_min_bounds.ncml.ddx.bescmd  float64_invalid.ncml.ddx.bescmd  float64_max_bounds.ncml.ddx.bescmd  float64_min_bounds.ncml.ddx.bescmd  int16_invalid.ncml.ddx.bescmd  int16_max_bounds.ncml.ddx.bescmd  int16_min_bounds.ncml.ddx.bescmd  int32_invalid.ncml.ddx.bescmd  (+10 more)
conf/: icu.m4
tests/: Makefile.am  aggregations.at  attribute_tests.at  bes.conf.in  bes.conf.modules.in  bes_no_nc_global.conf.in  bes_no_nc_global.conf.modules.in  generate_baselines.sh  generate_bescmd.sh  make_test_grids.rb  parse_error_misc.at  template.bescmd.in  testsuite.at  valgrind_supp.txt  variable_misc.at  variable_new_arrays.at  variable_new_multi_arrays.at  variable_new_scalars.at  variable_new_structures.at  variable_rename.at
tests/baselines/: OtherXML_nested_namespaces.ncml.ddx  OtherXML_shadowed_namespace.ncml.ddx  OtherXML_with_ancestral_namespace.ncml.ddx  attribute_OtherXML.ncml.das  attribute_OtherXML.ncml.ddx  attribute_OtherXML_Attribute.ncml.ddx  attribute_OtherXML_rename.ncml.ddx  attribute_with_dot.ncml.das  attribute_with_dot.ncml.ddx  fnoc1_explicit.ncml.ddx  fnoc1_improved.ncml.ddx  fnoc1_rename_test.ncml.ddx  grid_attributes.ncml.das  grid_attributes.ncml.dds  grid_attributes.ncml.ddx  nest_test.ncml.ddx  nested_passthrough_cons_1.ncml.ddx  reentrancy_test.ncml.das  reentrancy_test.ncml.ddx  sample_virtual_dataset.ncml.das  sample_virtual_dataset.ncml.ddx  separator_test.ncml.das  separator_test.ncml.dds  separator_test.ncml.ddx  separator_test.ncml.dods  var_new_Structure.ncml.ddx  var_new_Structure_nest.ncml.ddx  var_new_structure_parse_error_1.ncml.ddx  var_orgName.ncml.das  var_orgName.ncml.dds  var_orgName.ncml.ddx  var_orgName.ncml.dods  var_orgName_Structure.ncml.das  var_orgName_Structure.ncml.dds  var_orgName_Structure.ncml.ddx  var_orgName_Structure.ncml.dods  var_orgName_Structure_cons_2.ncml.ddx  var_orgName_Structure_constraint_1.ncml.ddx  var_orgName_cons_2.ncml.ddx  var_orgName_cons_4.ncml.ddx  (+3 more)
(+375 files in other folders)
